Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25851

AutoTest doesn't show any ctest test for Qt Creator

XMLWordPrintable

    • Windows
    • 9542ccd14eb92626c24c96614250ffa6596576e2 (qt-creator/qt-creator/4.15)

      I have built Qt Creator master with CMake with the following parameters:

      -DCMAKE_PREFIX_PATH:STRING=%{Qt:QT_INSTALL_PREFIX};c:/llvm/mingw
      -DWITH_TESTS=ON
      

      This should build Qt Creator with all plugins and tests.

      The "Qt Test" and "Google Test" when run hat ~1700 tests. CTest is displayed with none.

      If I run in the locator window the following command:

      ! ctest --test-dir c:\Projects\QtCreator\build-repo-MinGW_64_bit_Qt_5_15_2-Release -j 20
      

      I would see ctest running ~3100 tests.

      I don't know if the ~1700 tests from above are somehow equivalent to the ~3100 tests from ctest.

      I have attached a screencast showcasing this report.

        1. QtCreator-Tests.mp4
          9.05 MB
          Cristian Adam
        For Gerrit Dashboard: QTCREATORBUG-25851
        # Subject Branch Project Status CR V

            cstenger Christian Stenger
            cadam Cristian Adam
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes