CMakePM: Raise timeout for ctest run

Depending on the size of projects and the underlying toolchain we
may end up with no tests as the timeout for the ctest run was just
too small.

Fixes: QTCREATORBUG-25851
Change-Id: I5617987a9e43b16c02a2c0b4afd598a3ff909299
Reviewed-by: David Schulz <david.schulz@qt.io>